examples/test/testpolicy10963.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10963
  namespace: namespace98
spec:
  podSelector:
    matchLabels:
      key29: value20
      key49: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value17
      podSelector:
        matchLabels:
          key36: value48
          key33: value1
          key6: value20
